fix: submit button alignment
Because of flex replacement with inline-flex, submit buttons was not
center align anymore.

--- a/src/scss/helpers/mixins/_buttons.scss
+++ b/src/scss/helpers/mixins/_buttons.scss
@@ -14,6 +14,7 @@
 }
 
 @mixin buttonStyle1 {
+	display: flex;
 	background: linear-gradient(
 			to left,
 			cssVar(color-primary) 0 33.3%,
