--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2482,6 +2482,7 @@ small {
 	border-radius: 0.375rem;
 	box-shadow: 0 0 0 0.125rem var(--apcom-color-primary), -0.125rem 0.125rem 0 0.125rem var(--apcom-color-shadow), -0.1875rem 0.1875rem 0.1875rem 0.125rem var(--apcom-color-shadow-darker), inset 0 0 0 0.125rem var(--apcom-color-shadow-lighter), inset 0 -0.625rem 1rem 0.375rem rgba(0, 0, 0, 0.13), inset 0 0.5625rem 2rem 0.25rem rgba(255, 255, 255, 0.13);
 	color: var(--apcom-color-fg-inverted);
+	display: flex;
 	font-variant: small-caps;
 	margin: auto;
 	padding: 1.25rem var(--apcom-spacing-md);
@@ -3545,6 +3546,7 @@ small {
 	border-radius: 0.375rem;
 	box-shadow: 0 0 0 0.125rem var(--apcom-color-primary), -0.125rem 0.125rem 0 0.125rem var(--apcom-color-shadow), -0.1875rem 0.1875rem 0.1875rem 0.125rem var(--apcom-color-shadow-darker), inset 0 0 0 0.125rem var(--apcom-color-shadow-lighter), inset 0 -0.625rem 1rem 0.375rem rgba(0, 0, 0, 0.13), inset 0 0.5625rem 2rem 0.25rem rgba(255, 255, 255, 0.13);
 	color: var(--apcom-color-fg-inverted);
+	display: flex;
 	font-variant: small-caps;
 	margin: auto;
 	padding: 1.25rem var(--apcom-spacing-md);
@@ -4404,6 +4406,7 @@ small {
 		border-radius: 0.375rem;
 		box-shadow: 0 0 0 0.125rem var(--apcom-color-primary), -0.125rem 0.125rem 0 0.125rem var(--apcom-color-shadow), -0.1875rem 0.1875rem 0.1875rem 0.125rem var(--apcom-color-shadow-darker), inset 0 0 0 0.125rem var(--apcom-color-shadow-lighter), inset 0 -0.625rem 1rem 0.375rem rgba(0, 0, 0, 0.13), inset 0 0.5625rem 2rem 0.25rem rgba(255, 255, 255, 0.13);
 		color: var(--apcom-color-fg-inverted);
+		display: flex;
 		font-variant: small-caps;
 		padding: 1.25rem var(--apcom-spacing-md);
 		position: relative;
